# llama.cpp-dgx

./: CMakeLists.txt  README.md  convert_hf_to_gguf.py  ty.toml
common/: arg.cpp  common.cpp  common.h
docs/: DFLASH.md  rfc-flashqla-port.md  rfc-gdn-chunk-kernel.md  rfc-unified-target-cache.md
docs/templates/: qwen35-aeon-single-toolcall.jinja
ggml/include/: ggml-cuda.h  ggml.h
ggml/src/: ggml-common.h  ggml-quants.h  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h  quants.h
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  cpy-utils.cuh  cpy.cu  fattn-common.cuh  fattn-vec.cuh  fattn.cu  gated_delta_net.cuh  gated_delta_net_chunk.cu  gated_delta_net_chunk_kernels.cuh  ggml-cuda.cu  mma.cuh  mmq.cu  mmq.cuh  mmvq.cu  turbo-wht.cu  turbo-wht.cuh
include/: llama.h
models/templates/: google-gemma-4-31B-it-interleaved.jinja  google-gemma-4-31B-it.jinja
src/: llama-context.cpp  llama-kv-cache.cpp  llama-kv-cache.h  llama-model.cpp  llama-model.h
tests/: test-backend-ops.cpp  test-gdn-chunk.cu
tools/: CMakeLists.txt
tools/dflash-cli/: CMakeLists.txt  bench_chat.py  dflash27b.h  dflash_graph.h  gguf_draft_loader.cpp  gguf_target_loader.cpp  inject_pqs.py  internal.h  main.cpp  quantize_nvfp4_plain.py  qwen35_target_graph.cpp  qwen3_dflash_graph.cpp  safetensors_draft.cpp  session.cpp  strip_visual.py
tools/dflash-server/: CMakeLists.txt  main.cpp
tools/server/: CMakeLists.txt  server-common.cpp  server-common.h  server-context.cpp  server-queue.cpp  server-queue.h
tools/test/: gdn_chunk_ref.py
